<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_space_small"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_space_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            style="@style/AppTheme.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_text_code_row_01"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
             />

        <TextView
            style="@style/AppTheme.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_text_code_row_02"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            />

        <TextView
            style="@style/AppTheme.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_text_code_row_03"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            />

        <TextView
            style="@style/AppTheme.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_text_code_row_04"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            />

        <TextView
            style="@style/AppTheme.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_text_code_row_05"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_space_small"
        android:drawableStart="@drawable/ic_call"
        android:background="@drawable/shape_round_solid_green_back"
        android:textColor="@color/colorWhite"
        android:text="@string/activity_main_button_text"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>